--- a/templates/canvasMixed.html
+++ b/templates/canvasMixed.html
@@ -3,7 +3,6 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -28,6 +27,9 @@
 
 </head>
 
+
+</head>
+
 <body class="stretched sticky-responsive-pagemenu">
 
 	<!-- Document Wrapper
@@ -36,7 +38,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="page-section split-menu clearfix">
+		<header id="header" class="page-section split-menu">
 
 			<div id="header-wrap">
 
@@ -44,6 +46,8 @@
 
 					<div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
 
+					<!-- Logo
+					============================================= -->
 					<div id="logo">
 						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='images/logo.png') }}"
 								alt="Logo"></a>
@@ -53,8 +57,8 @@
 
 					<!-- Primary Navigation
 					============================================= -->
-					<nav id="primary-menu" class="style">
-						
+					<nav id="primary-menu">
+
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
 							<li><a href="county"><div>County</div></a></li>
@@ -68,7 +72,7 @@
 							<li><a href="contact"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
-
+						
 					</nav><!-- #primary-menu end -->
 
 				</div>
@@ -77,27 +81,52 @@
 
 		</header><!-- #header end -->
 
-		<section id="slider" class="slider-element slider-parallax with-header page-section clearfix">
+		<section id="slider" class="slider-element slider-parallax full-screen force-full-screen with-header swiper_wrapper page-section clearfix">
 
 			<div class="slider-parallax-inner">
 
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }});">
+						<div class="swiper-slide dark" style="background-image: url('images/slider/swiper/1.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
-									<h1 data-animate="fadeInUp" data-delay="400">Analytics</h1>
-									<span data-animate="fadeInUp" data-delay="300"></span>
+									<h2 data-animate="fadeInUp">Welcome to Canvas</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on our Canvas.</p>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide dark">
+							<div class="container clearfix">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-animate="fadeInUp">Beautifully Flexible</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Powerful Layout with Responsive functionality that can be adapted to any screen size.</p>
+								</div>
+							</div>
+							<div class="video-wrap">
+								<video poster="images/videos/explore.jpg" preload="auto" loop autoplay muted>
+									<source src='images/videos/explore.mp4' type='video/mp4' />
+									<source src='images/videos/explore.webm' type='video/webm' />
+								</video>
+								<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
+							</div>
+						</div>
+						<div class="swiper-slide" style="background-image: url('images/slider/swiper/3.jpg'); background-position: center top;">
+							<div class="container clearfix">
+								<div class="slider-caption">
+									<h2 data-animate="fadeInUp">Great Performance</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">You'll be surprised to see the Final Results of your Creation &amp; would crave for more.</p>
 								</div>
 							</div>
 						</div>
 					</div>
-																				  
 					<div class="slider-arrow-left"><i class="icon-angle-left"></i></div>
 					<div class="slider-arrow-right"><i class="icon-angle-right"></i></div>
-					
+					<div class="slide-number"><div class="slide-number-current"></div><span>/</span><div class="slide-number-total"></div></div>
+					<a href="#" data-scrollto="#section-about" class="one-page-arrow dark">
+						<i class="icon-angle-down infinite animated fadeInDown"></i>
+					</a>
 				</div>
-				
+
 			</div>
 
 		</section>
