--- a/templates/atest.html
+++ b/templates/atest.html
@@ -102,8 +102,8 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="#dashboard" data href="#section-dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="#forecasting" data href="#section-forecasting"><div>FORECASTING</div></a></li>
+							<li><a href="#" data href="#section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="#" data href="#section-forecasting"><div>FORECASTING</div></a></li>
 						</ul>
 					</nav>
 
@@ -119,7 +119,7 @@
 		============================================= -->
 		<section id="content">
 
-			<div class="content-wrap"
+			<div class="content-wrap">
 
 				<section id="section-dashboard" class="page-section">
 						
@@ -129,7 +129,7 @@
 				
 							<h2>DASHBOARD</h2>
 							
-							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width="1050" height="1400" style="text-align: center"></iframe></p>
 				
 						</div>
 						
@@ -145,7 +145,7 @@
 				
 							<h2 class="center">FORECAST</h2>
 							
-							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width="1050" height="1400" style="text-align: center"></iframe></p>
 				
 						</div>
 						
