--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -3,7 +3,6 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -118,18 +117,15 @@
 
 				<div class="container clearfix">
 
-					<div class="menu-title">Explore <span>CANVAS</span></div>
+					<div class="menu-title"><span>DATA&nbsp;</span>&nbsp;ANALYTICS</div>
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="#" data-href="#header"><div>Start</div></a></li>
-							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
-							<li><a href="#" data-href="#section-work"><div>Work</div></a></li>
+							<li><a href="#" data-href="#section-dashboard"><div>Dashboard</div></a></li>
+							<li><a href="#" data-href="#section-forecasting"><div>Forecasting</div></a></li>
 							<li><a href="#" data-href="#section-team"><div>Team</div></a></li>
 							<li><a href="#" data-href="#section-services"><div>Services</div></a></li>
 							<li><a href="#" data-href="#section-pricing"><div>Pricing</div></a></li>
-							<li><a href="blog.html"><div>Blog</div></a></li>
-							<li><a href="#" data-href="#section-testimonials" class="no-offset"><div>Testimonials</div></a></li>
 							<li><a href="#" data-href="#section-contact"><div>Contact</div></a></li>
 						</ul>
 					</nav>
@@ -148,302 +144,37 @@
 
 			<div class="content-wrap">
 
-				<section id="section-about" class="page-section">
+				<section id="section-dashboard" class="page-section">
 
 					<div class="container clearfix">
 
 						<div class="heading-block center">
-							<h2>We are <span>Canvas</span></h2>
-							<span>One of the most Versatile Theme on Themeforest</span>
-						</div>
-
-						<div class="col_one_third nobottommargin">
-							<div class="feature-box media-box">
-								<div class="fbox-media">
-									<img src="images/services/1.jpg" alt="Why choose Us?">
-								</div>
-								<div class="fbox-desc">
-									<h3>Why choose Us.<span class="subtitle">Because we are Reliable.</span></h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est voluptatem accusamus molestiae eaque perspiciatis mollitia.</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="col_one_third nobottommargin">
-							<div class="feature-box media-box">
-								<div class="fbox-media">
-									<img src="images/services/2.jpg" alt="Why choose Us?">
-								</div>
-								<div class="fbox-desc">
-									<h3>Our Mission.<span class="subtitle">To Redefine your Brand.</span></h3>
-									<p>Quos, non, esse eligendi ab accusantium voluptatem. Maxime eligendi beatae, atque tempora ullam. Vitae delectus quia, consequuntur rerum molestias quo.</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="col_one_third nobottommargin col_last">
-							<div class="feature-box media-box">
-								<div class="fbox-media">
-									<img src="images/services/3.jpg" alt="Why choose Us?">
-								</div>
-								<div class="fbox-desc">
-									<h3>What we Do.<span class="subtitle">Make our Customers Happy.</span></h3>
-									<p>Porro repellat vero sapiente amet vitae quibusdam necessitatibus consectetur, labore totam. Accusamus perspiciatis asperiores labore esse ab accusantium ea modi ut.</p>
-								</div>
-							</div>
+				
+							<h2>DASHBOARD</h2>
+							
+							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width="1050" height="1400" style="text-align: center"></iframe></p>
+				
 						</div>
 
 						<div class="clear"></div>
 
 					</div>
 
-					<div class="section dark parallax nobottommargin" style="padding: 80px 0;background-image: url('images/parallax/1.jpg');" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
-
-						<div class="container clearfix">
-
-							<div class="col_one_fourth nobottommargin center" data-animate="bounceIn">
-								<i class="i-plain i-xlarge divcenter nobottommargin icon-code"></i>
-								<div class="counter counter-lined"><span data-from="100" data-to="846" data-refresh-interval="50" data-speed="2000"></span>K+</div>
-								<h5>Lines of Codes</h5>
-							</div>
-
-							<div class="col_one_fourth nobottommargin center" data-animate="bounceIn" data-delay="200">
-								<i class="i-plain i-xlarge divcenter nobottommargin icon-magic"></i>
-								<div class="counter counter-lined"><span data-from="3000" data-to="15360" data-refresh-interval="100" data-speed="2500"></span>+</div>
-								<h5>KBs of HTML Files</h5>
-							</div>
-
-							<div class="col_one_fourth nobottommargin center" data-animate="bounceIn" data-delay="400">
-								<i class="i-plain i-xlarge divcenter nobottommargin icon-file-text"></i>
-								<div class="counter counter-lined"><span data-from="10" data-to="386" data-refresh-interval="25" data-speed="3500"></span>*</div>
-								<h5>No. of Templates</h5>
-							</div>
-
-							<div class="col_one_fourth nobottommargin center col_last" data-animate="bounceIn" data-delay="600">
-								<i class="i-plain i-xlarge divcenter nobottommargin icon-time"></i>
-								<div class="counter counter-lined"><span data-from="60" data-to="1200" data-refresh-interval="30" data-speed="2700"></span>+</div>
-								<h5>Hours of Coding</h5>
-							</div>
-
-						</div>
-
-					</div>
-
 				</section>
 
-				<section id="section-work" class="page-section topmargin-lg">
+				<section id="section-forecasting" class="page-section">
 
-					<div class="heading-block center">
-						<h2>Our Works</h2>
-						<span>Some of the Awesome Projects we've worked on.</span>
-					</div>
+					<div class="container clearfix">
 
-					<div class="container clearfix center">
+						<div class="heading-block center">
+				
+							<h2>FORECASTING</h2>
+							
+							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width="1050" height="1400" style="text-align: center"></iframe></p>
+				
+						</div>
 
-						<!-- Portfolio Items
-						============================================= -->
-						<div id="portfolio" class="portfolio portfolio-nomargin clearfix">
-
-							<article class="portfolio-item pf-media pf-icons">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/1.jpg" alt="Open Imagination">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Open Imagination</a></h3>
-									<span><a href="#">Media</a>, <a href="#">Icons</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-illustrations">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/2.jpg" alt="Locked Steel Gate">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/2.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Locked Steel Gate</a></h3>
-									<span><a href="#">Illustrations</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-graphics pf-uielements">
-								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/portfolio/4/3.jpg" alt="Mac Sunglasses">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="http://vimeo.com/89396394" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
-										<a href="portfolio-single-video.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-video.html">Mac Sunglasses</a></h3>
-									<span><a href="#">Graphics</a>, <a href="#">UI Elements</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-icons pf-illustrations">
-								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/portfolio/4/4.jpg" alt="Mac Sunglasses">
-									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/4.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/4-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-gallery.html">Morning Dew</a></h3>
-									<span><a href="#">Icons</a>, <a href="#">Illustrations</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-uielements pf-media">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/5.jpg" alt="Console Activity">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/5.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Console Activity</a></h3>
-									<span><a href="#">UI Elements</a>, <a href="#">Media</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-graphics pf-illustrations">
-								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/portfolio/4/6.jpg" alt="Mac Sunglasses">
-									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/6.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/6-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="images/portfolio/full/6-2.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="images/portfolio/full/6-3.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-gallery.html">Shake It!</a></h3>
-									<span><a href="#">Illustrations</a>, <a href="#">Graphics</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-uielements pf-icons">
-								<div class="portfolio-image">
-									<a href="portfolio-single-video.html">
-										<img src="images/portfolio/4/7.jpg" alt="Backpack Contents">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="http://www.youtube.com/watch?v=kuceVNBTJio" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
-										<a href="portfolio-single-video.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-video.html">Backpack Contents</a></h3>
-									<span><a href="#">UI Elements</a>, <a href="#">Icons</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-graphics">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/8.jpg" alt="Sunset Bulb Glow">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/8.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Sunset Bulb Glow</a></h3>
-									<span><a href="#">Graphics</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-illustrations pf-icons">
-								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/portfolio/4/9.jpg" alt="Mac Sunglasses">
-									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/9.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/9-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="images/portfolio/full/9-2.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Bridge Side</a></h3>
-									<span><a href="#">Illustrations</a>, <a href="#">Icons</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-graphics pf-media pf-uielements">
-								<div class="portfolio-image">
-									<a href="portfolio-single-video.html">
-										<img src="images/portfolio/4/10.jpg" alt="Study Table">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="http://vimeo.com/91973305" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
-										<a href="portfolio-single-video.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-video.html">Study Table</a></h3>
-									<span><a href="#">Graphics</a>, <a href="#">Media</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-media pf-icons">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/11.jpg" alt="Workspace Stuff">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/11.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Workspace Stuff</a></h3>
-									<span><a href="#">Media</a>, <a href="#">Icons</a></span>
-								</div>
-							</article>
-
-							<article class="portfolio-item pf-illustrations pf-graphics">
-								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/portfolio/4/12.jpg" alt="Mac Sunglasses">
-									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/12.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/12-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-gallery.html">Fixed Aperture</a></h3>
-									<span><a href="#">Illustrations</a>, <a href="#">Graphics</a></span>
-								</div>
-							</article>
-
-						</div><!-- #portfolio end -->
+						<div class="clear"></div>
 
 					</div>
 
