--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -35,7 +35,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="page-section split-menu">
+		<header id="header" class="no-sticky page-section split-menu">
 
 			<div id="header-wrap">
 
