--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -118,7 +118,7 @@
 
 			<div class="content-wrap">
 
-				<section id="section-dashboard" class="page-section topmargin-sm">
+				<section id="section-dashboard" class="page-section notopmargin">
 
 					<div class="container clearfix">
 
@@ -136,7 +136,7 @@
 
 				</section>
 
-				<section id="section-forecasting" class="page-section topmargin-sm">
+				<section id="section-forecasting" class="page-section notopmargin">
 
 					<div class="container clearfix">
 
