Updated all footer copyrights

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -165,7 +165,7 @@
 		<footer id="footer" class="dark">
 
 
-			<!-- Copyrights
+			<!-- Copyright
 			============================================= -->
 			<div id="copyrights">
 
@@ -173,12 +173,13 @@
 
 					<div class="col_full nobottommargin center">
 
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
+						Copyright &copy; &nbsp;2019 &nbsp;Emergency &nbsp;Coders
+						
 					</div>
 
 				</div>
 
-			</div><!-- #copyrights end -->
+			</div><!-- #copyright end -->
 
 		</footer><!-- #footer end -->
 
