--- a/templates/atest.html
+++ b/templates/atest.html
@@ -169,7 +169,7 @@
 
 					<div class="col_full nobottommargin center">
 
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
+						Copyright &copy; &nbsp;Emergency &nbsp;Coders
 					</div>
 
 				</div>
