--- a/templates/contact.html
+++ b/templates/contact.html
@@ -176,7 +176,7 @@
 		<footer id="footer" class="dark">
 
 
-			<!-- Copyrights
+			<!-- Copyright
 			============================================= -->
 			<div id="copyrights">
 
@@ -184,12 +184,13 @@
 
 					<div class="col_full nobottommargin center">
 
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
+						Copyright &copy; &nbsp;2019 &nbsp;Emergency &nbsp;Coders
+						
 					</div>
 
 				</div>
 
-			</div><!-- #copyrights end -->
+			</div><!-- #copyright end -->
 
 		</footer><!-- #footer end -->
 
