--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -234,7 +234,7 @@
 
 					<div class="col_full nobottommargin center">
 
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
+						Copyright &copy; &nbsp;2019 &nbsp;Emergency &nbsp;Coders
 					</div>
 
 				</div>
