--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -152,7 +152,8 @@
 
 					<div class="col_full nobottommargin center">
 
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
+						Copyright &copy; &nbsp;2019 &nbsp;Emergency &nbsp;Coders
+						
 					</div>
 
 				</div>
