Updated contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -183,7 +183,7 @@
 
 					<div class="col_full nobottommargin center">
 
-						Copyright &copy; &nbsp;2019 &nbsp;Emergency &nbsp;Coders
+						Copyright &copy; &nbsp;Emergency &nbsp;Coders
 						
 					</div>
 
