--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -106,7 +106,7 @@
 
 							<div class="form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="action="{{ url_for('static', filename='include/form.php') }}" method="post">
 
 								<div class="form-process"></div>
 
