--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -129,7 +129,7 @@
 				<h2 class="center">DASHBOARD</h2>
 			</div>
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau2" width=1050 height=1400 style="text-align: center"></iframe></p>
 				
 				<!-- </div>
 
