--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -132,7 +132,7 @@
 				<h2 class="center">FORECASTING</h2>
 			</div>
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau1" width=1050 height=1400 style="text-align: center"></iframe></p>
 				
 				<!-- </div>
 
