--- a/templates/county.html
+++ b/templates/county.html
@@ -113,7 +113,7 @@
 			<div id="section-forecasting" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">DASHBOARD</h2>
+				<h2 class="center">COUNTY</h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau3" width=1050 height=1400 style="text-align: center"></iframe></p>
