Enlarged headers to h1

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -97,6 +97,10 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
+					
+					<div class="heading-block topmargin noborder">
+						<h1 class="center">Contact</h1>
+					</div>
 
 						<!-- Contact Form
 						============================================= -->
