--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -98,6 +98,10 @@
 
 				<div class="container clearfix">
 					
+					<div class="heading-block topmargin noborder">
+						<h1 class="center">FAQS</h1>
+					</div>
+					
 					<!-- Post Content
 					============================================= -->
 					<div class="postcontent nobottommargin clearfix">
