--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -97,6 +97,10 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
+					
+					<div class="heading-block topmargin noborder">
+						<h1 class="center">Alerts</h1>
+					</div>
 
 						<!-- Alerts Contact Form
 						============================================= -->
