--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -123,10 +123,10 @@
 
 				<div class="container clearfix"> -->
 			
-			<div id="section-dashboard" class="page-section"></div>
+			<div id="section-analytics" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">DASHBOARD</h2>
+				<h1 class="center">DASHBOARD</h1>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau2" width=1050 height=1400 style="text-align: center"></iframe></p>
