--- a/templates/county.html
+++ b/templates/county.html
@@ -110,10 +110,10 @@
 
 				<div class="container clearfix"> -->
 			
-			<div id="section-forecasting" class="page-section"></div>
+			<div id="section-county" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">COUNTY</h2>
+				<h1 class="center">COUNTY</h1>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau3" width=1050 height=1400 style="text-align: center"></iframe></p>
