--- a/templates/neighborhoods.html
+++ b/templates/neighborhoods.html
@@ -122,7 +122,7 @@
 
 			</div> -->
 
-		</section><!-- #content end -->
+		</section><!-- #content end -->g
 
 		<!-- Footer
 		============================================= -->
