Updated page headers

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -94,13 +94,15 @@
 		============================================= -->
 		<section id="content">
 
-			<div class="content-wrap">
+			<!-- <div class="content-wrap"> -->
+			
+			<div id="section-alerts" class="page-section"></div>
 				
 				<div class="heading-block topmargin noborder">
 					<h2 class="center">Alerts</h2>
 				</div>
 
-				<div class="container clearfix">
+				<!-- <div class="container clearfix"> -->
 					
 						<!-- Alerts Contact Form
 						============================================= -->
@@ -151,15 +153,11 @@
 									<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
 								</div>
 
-								<input type="hidden" name="prefix" value="template-contactform-">
-
-							</form>
-							
-						</div>
+								<input type="hidden" name="prefix" value="template-contactform-" />
+						
+						</form>
 
 				</div>
-
-			</div>
 
 		</section><!-- #content end -->
 
