--- a/templates/contact.html
+++ b/templates/contact.html
@@ -94,13 +94,15 @@
 		============================================= -->
 		<section id="content">
 
-			<div class="content-wrap">
+			<!-- <div class="content-wrap"> -->
+			
+			<div id="section-alerts" class="page-section"></div>
 				
 				<div class="heading-block topmargin noborder">
-					<h2 class="center">Contact</h2>
+					<h2 class="center">Alerts</h2>
 				</div>
 
-				<div class="container clearfix">
+				<!-- <div class="container clearfix"> -->
 			
 						<!-- Contact Form
 						============================================= -->
@@ -167,10 +169,6 @@
 							</form>
 							
 						</div>
-
-				</div>
-
-			</div>
 
 		</section><!-- #content end -->
 
