Updated contact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,14 +99,13 @@
 			<div id="section-alerts" class="page-section"></div>
 				
 				<div class="heading-block topmargin noborder">
-					<h2 class="center">Alerts</h2>
+					<h2 class="center">Contact &nbsp;Us</h2>
 				</div>
 
 				<!-- <div class="container clearfix"> -->
 			
 						<!-- Contact Form
 						============================================= -->
-						<h3>Contact Us</h3>
 
 						<div class="form-widget">
 
