--- a/templates/contact.html
+++ b/templates/contact.html
@@ -106,6 +106,7 @@
 			
 						<!-- Contact Form
 						============================================= -->
+						<h3>Contact Us</h3>
 
 						<div class="form-widget">
 
@@ -127,7 +128,7 @@
 
 								<div class="col_one_third col_last">
 									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="required sm-form-control" />
+									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
 								</div>
 
 								<div class="clear"></div>
@@ -139,7 +140,7 @@
 
 								<div class="col_one_third col_last">
 									<label for="template-contactform-service">Services</label>
-									<select id="template-contactform-service" name="template-contactform-service" class="required sm-form-control">
+									<select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
 										<option value="">-- Select One --</option>
 										<option value="other">Other</option>
 										<option value="meeting">Meeting</option>
@@ -168,7 +169,7 @@
 							</form>
 							
 						</div>
-
+			
 		</section><!-- #content end -->
 
 		<!-- Footer
