--- a/templates/county.html
+++ b/templates/county.html
@@ -112,10 +112,10 @@
 			
 			<div id="section-county" class="page-section"></div>
 						
-			<div class="heading-block topmargin noborder">
+			<!-- <div class="heading-block topmargin noborder">
 				<h2 class="center"> HARRIS &nbsp;COUNTY</h2>
-			</div>
-					""
+			</div> -->
+			
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau3" width="1050" height="1500" style="text-align: center"></iframe></p>
 				
 				<!-- </div>
