--- a/templates/neighborhoods.html
+++ b/templates/neighborhoods.html
@@ -112,11 +112,11 @@
 			
 			<div id="section-forecasting" class="page-section"></div>
 						
-			<div class="heading-block topmargin noborder">
+			<!--<div class="heading-block topmargin noborder">
 				<h2 class="center">NEIGHBORHOODS</h2>
-			</div>
+			</div> -->
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau4" width=1050 height=1400 style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau4" width="1280" height="1800" style="text-align: center"></iframe></p>
 				
 				<!-- </div>
 
