--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -128,11 +128,11 @@
 			
 			<div id="section-forecasting" class="page-section"></div>
 						
-			<div class="heading-block topmargin noborder">
+			<!-- <div class="heading-block topmargin noborder">
 				<h2 class="center">FORECASTING</h2>
-			</div>
+			</div> -->
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau1" width=1050 height=1400 style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau1" width="1280" height="1800" style="text-align: center"></iframe></p>
 				
 				<!-- </div>
 
