--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -117,7 +117,7 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="content">
+		<section id="content">ti
 
 			<!--<div class="content-wrap">
 
