--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -97,10 +97,13 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
+					
+					<div class="heading-block topmargin noborder">
+						<h2 class="center">Email &nbsp;Alert &nbsp;System</h2>
+					</div>
 
 						<!-- Alerts Contact Form
 						============================================= -->
-						<h3>Send Email Alert Notifications</h3>
 
 						<div class="form-widget">
 
