--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -99,7 +99,7 @@
 				<div class="container clearfix">
 					
 					<div class="heading-block topmargin noborder">
-						<h2 class="center">Email &nbsp;Alert &nbsp;System</h2>
+						<h2 class="center">Email &nbsp;Alerts</h2>
 					</div>
 
 						<!-- Alerts Contact Form
