--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -95,12 +95,12 @@
 		<section id="content">
 
 			<div class="content-wrap">
+				
+				<div class="heading-block topmargin noborder">
+					<h2 class="center">Email &nbsp;Alert &nbsp;System</h2>
+				</div>
 
-				<div class="container clearfix">
-					
-					<div class="heading-block topmargin noborder">
-						<h2 class="center">Email &nbsp;Alerts</h2>
-					</div>
+					<div class="container clearfix">
 
 						<!-- Alerts Contact Form
 						============================================= -->
@@ -125,7 +125,7 @@
 
 								<div class="col_one_third col_last">
 									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
+									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="required sm-form-control" />
 								</div>
 
 								<div class="clear"></div>
