--- a/templates/contact.html
+++ b/templates/contact.html
@@ -93,17 +93,15 @@
 		<!-- Content
 		============================================= -->
 		<section id="content">
-
-			<!-- <div class="content-wrap"> -->
 			
-			<div id="section-alerts" class="page-section"></div>
-				
-				<div class="heading-block topmargin noborder">
-					<h2 class="center">Contact &nbsp;Us</h2>
-				</div>
+			<div class="heading-block topmargin noborder">
+				<h2 class="center">Contact &nbsp;Us</h2>
+			</div>
 
-				<!-- <div class="container clearfix"> -->
-			
+				<div class="content-wrap">
+
+					<div class="container clearfix">
+
 						<!-- Contact Form
 						============================================= -->
 
@@ -111,7 +109,7 @@
 
 							<div class="form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="{{ url_for('static', filename='include/form.php') }}" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="/static/include/form.php" method="post">
 
 								<div class="form-process"></div>
 
@@ -168,8 +166,13 @@
 							</form>
 							
 						</div>
+						
+					</div>
+					
+			</div>
 			
 		</section><!-- #content end -->
+
 
 		<!-- Footer
 		============================================= -->
